<resources>
    <string name="app_name">DentGeek</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="hint_username">Nombre de Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Login</string>
    <string name="dont_have_account">¿No tienes cuenta?,</string>
    <string name="create_here">crea una aquí</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="text_button_createaccount">Únete</string>
    <string name="toolbar_title_createaccount">Crear Cuenta </string>
    <string name="username_card">Clinica Denta Medic</string>
    <string name="firstword_card">Hace</string>
    <string name="timecard_card">4 días</string>
    <string name="likenumbercard_card">10 Me Gusta</string>

    <string name="tab_search">Buscar</string>
    <string name="tab_home">Home</string>
    <string name="tab_profile">Yo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="secondword_detail">Me Gusta</string>
    <string name="titleimagedetail">\"Somos una empresa de prestigio\"</string>
    <string name="lorem">Nuestra filosofía esta basada en los valores y principios de calidad peruana, contamos con los más altos estándares internacionales de calidad en nuestros procedimientos, además de profesionales de primer nivel de todas las especialidades odontológicas, todos con estudios especializados en su respectiva disciplina odontológica, capacitados en reconocidas universidades tanto fuera como dentro del país, con conocimiento de los idiomas: ingles, francés y alemán, todo lo mencionado le aseguran un tratamiento odontológico integral con precios competitivos en el mercado internacional.</string>
    <string name="transitionname_picture">transitionamepicture</string>
</resources>
